--- a/gitsample.html
+++ b/gitsample.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ping Foundation</title>
 </head>
 <body>
-
+Welcome to YouTurn 2.0
 </body>
 </html>
