--- a/gitsample.html
+++ b/gitsample.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet">
     <title>Ping Foundation</title>
 </head>
 <body>
-Welcome to YouTurn 2.0
+<h1 class="hello">Welcome to YouTurn 2.0</h1>
 </body>
 </html>
